# smart-waterer

./: .gitignore  README.md
doc/: Doxyfile-esp32-firmware
doc/diagrams/: component-diagram.uxf
esp32_firmware/: .clang-format  README.md  sdkconfig
esp32_firmware/main/: CMakeLists.txt
esp32_firmware/main/inc/: config.h  display.h  http_server.h  io_util.h  user_config.h  wifi_ap.h
esp32_firmware/main/src/: display.c  http_server.c  io_util.c  main.c  user_config.c  wifi_ap.c
mobile_app/: README.md
